test_output.txt
   Compiling singularity-code-analysis v0.1.0 (/home/mhugo/code/singularity/packages/singularity-code-analysis)
warning: unused import: `Language`
 --> packages/singularity-code-analysis/examples/inspect_python.rs:2:19
  |
2 | use tree_sitter::{Language, Parser};
  |                   ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Language`
 --> packages/singularity-code-analysis/examples/inspect_elixir.rs:2:19
  |
2 | use tree_sitter::{Language, Parser};
  |                   ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `node`
 --> packages/singularity-code-analysis/examples/debug_python_ast.rs:8:16
  |
8 |     let tree = node::Tree::new::<PythonParser>(code.as_bytes());
  |                ^^^^ use of unresolved module or unlinked crate `node`
  |
  = help: if you wanted to use a crate named `node`, use `cargo add node` to add it to your `Cargo.toml`
help: consider importing this struct
  |
2 + use tree_sitter::Tree;
  |
help: if you import `Tree`, refer to it directly
  |
8 -     let tree = node::Tree::new::<PythonParser>(code.as_bytes());
8 +     let tree = Tree::new::<PythonParser>(code.as_bytes());
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `node`
  --> packages/singularity-code-analysis/examples/debug_python_ast.rs:15:22
   |
15 | fn print_tree(node: &node::Node, depth: usize) {
   |                      ^^^^ use of unresolved module or unlinked crate `node`
   |
   = help: if you wanted to use a crate named `node`, use `cargo add node` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `singularity-code-analysis` (example "debug_python_ast") due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
warning: `singularity-code-analysis` (example "inspect_python") generated 1 warning (run `cargo fix --example "inspect_python"` to apply 1 suggestion)
warning: `singularity-code-analysis` (example "inspect_elixir") generated 1 warning (run `cargo fix --example "inspect_elixir"` to apply 1 suggestion)
